language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_annotation.move
module M {
    struct CupC<T: copyable> {}
    struct C {}
    resource struct R {}

    foo() {
        ignore((abort 0: CupC<R>));
    }

    ignore<T>(x: T) {

    }

}
